[metadata]
name = uma-sdk
version = 0.1.0
description = Python SDK for UMA (universal money address)
long_description = file: README.rst
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
license = Apache-2.0
license_files = LICENSE.rst
project_urls =
  Documentation = https://app.lightspark.com/docs/uma-sdk/introduction
  Source Code = https://github.com/uma-universal-money-address/uma-python-sdk/

[options]
packages = find:
install_requires =
  cryptography
  eciespy
  requests

[options.packages.find]
include =
  uma*
