[metadata]
name = uma-sdk
version = 1.0.6
description = Python SDK for UMA (universal money address)
long_description = file: README.md
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
license = Apache-2.0
license_files = LICENSE
project_urls =
  Documentation = https://app.lightspark.com/docs/uma-sdk/introduction
  Source Code = https://github.com/uma-universal-money-address/uma-python-sdk/

[options]
packages = find:
include_package_data = True
install_requires =
  cryptography
  eciespy
  requests

[options.packages.find]
include =
  uma*
